# Angewante-Programmierung

./: README.md  README.me  TestCode.ipynb  Testübungen.ipynb  api_test.py  day-02-presentation.md  day-03-presentation.md  frontend.py  frontend_py.py  main-day-4.py  main-test-fabi.py  main-test-markus.py  main.py  notes.db  notes.json  pyproject.toml  test_main.py  work-log-fabi.md  work-log.md
Bus/: day-01-presentation_alt.md  main copy.py  main copy28.02..py  main(day 2).py  main-day-4-test copy.py  main03.05.bevor_datenbank.py  main1.py  main10.05.py  main_05_05_Terminal.py  main_1605.py  main_2802.py  main_vorHAusaufgabetag3.py
Exploration/: test_main_fabi.py  test_notes.py
Presentationen/: Angew_Progr_Code.ipynb  day-01-presentation.md  day-04-presentation.md  day-05-presentation.md  day-06-presentation.md  day-07-presentation.md
Vs_studio_data/: notes.json  pyproject.toml
data/: notes.json
